--- a/styles/style.css
+++ b/styles/style.css
@@ -28,8 +28,8 @@ nav{
 }
 nav .logo{
     color: white;
-    font-size: 30px;
-    font-weight: 600;
+    font-size: 25px;
+    font-weight: 100px;
 }
 
 nav .logo img {
