--- a/styles/style-login.css
+++ b/styles/style-login.css
@@ -6,7 +6,7 @@
     font-family: 'Poppins', sans-serif;
 }
 body{
-    background: url(../assents/fundo03png.jpg);
+    background: url(../assents/fundo03.jpg);
     height: 100vh;
     width: 100%;
     background-size: cover;
