Atualizar o style.css

--- a/styles/style.css
+++ b/styles/style.css
@@ -7,7 +7,7 @@
 }
 body{
     background: url(../assents/fundo03.jpg);
-    height: 100vh;
+    height: 100%;
     width: 100%;
     background-size: cover;
     background-repeat: no-repeat;
